[project]
name = "fruxon"
version = "0.3.1"
description = "The Fruxon SDK is a lightweight Python client for integrating with the Fruxon platform."
readme = "README.md"
authors = [
  {name = "Hagai Cohen", email = "hagai@fruxon.com"}
]
maintainers = [
  {name = "Hagai Cohen", email = "hagai@fruxon.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/fruxon-ai/fruxon-sdk/issues"
changelog = "https://github.com/fruxon-ai/fruxon-sdk/blob/main/HISTORY.md"
homepage = "https://github.com/fruxon-ai/fruxon-sdk"

[project.scripts]
fruxon = "fruxon.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
